Refactored the code using a local Qwen 3.6 35 billion parameter mixture-of-experts model